[gd_scene load_steps=9 format=3 uid="uid://xx2xg4us10hb"]

[ext_resource type="Script" path="res://Myassets/Scenes/RegisterAndLogin/register.gd" id="1_p3rvw"]
[ext_resource type="Texture2D" uid="uid://b7ohyih5763gy" path="res://Myassets/Img/Fondo.png" id="2_x6vul"]
[ext_resource type="Texture2D" uid="uid://dc30hbou8vcxw" path="res://Resources/img/pergamino.png" id="3_1gvwj"]
[ext_resource type="Texture2D" uid="uid://dgam6v07ytvmw" path="res://Resources/img/bttstandarnormal.png" id="4_kicv5"]
[ext_resource type="FontFile" uid="uid://bqqowu4g2h81s" path="res://Resources/img/Minecraft.ttf" id="5_ylpt1"]
[ext_resource type="Texture2D" uid="uid://cy38h6chs8gl7" path="res://Resources/img/backnormal.png" id="6_ly3k4"]
[ext_resource type="Texture2D" uid="uid://bwwaxiw2emgiq" path="res://Resources/img/backpressPNG.PNG" id="7_sxhig"]
[ext_resource type="Texture2D" uid="uid://ct5rt2osqg3ix" path="res://Resources/img/backhover.PNG" id="8_h0i6c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -2.0
offset_right = 3.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p3rvw")

[node name="fondo" type="TextureRect" parent="."]
offset_left = -380.0
offset_top = -130.0
offset_right = 1090.0
offset_bottom = 747.0
scale = Vector2(0.880247, 0.826699)
texture = ExtResource("2_x6vul")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="."]
offset_left = 152.0
offset_top = 27.0
offset_right = 277.0
offset_bottom = 61.0
texture = ExtResource("4_kicv5")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = -15.0
offset_right = 398.0
offset_bottom = 525.0
texture = ExtResource("3_1gvwj")

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
offset_left = 77.0
offset_top = 218.0
offset_right = 305.0
offset_bottom = 289.0
texture = ExtResource("4_kicv5")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="TextureRect"]
offset_left = 75.0
offset_top = 312.0
offset_right = 303.0
offset_bottom = 383.0
texture = ExtResource("4_kicv5")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 108.0
offset_right = 337.0
offset_bottom = 179.0
texture = ExtResource("4_kicv5")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 152.0
offset_top = 370.0
offset_right = 279.0
offset_bottom = 427.0
texture = ExtResource("4_kicv5")
expand_mode = 1

[node name="Username" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 117.0
offset_right = 327.0
offset_bottom = 172.0
theme_override_fonts/font = ExtResource("5_ylpt1")

[node name="Password" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 209.0
offset_right = 327.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("5_ylpt1")

[node name="ConfirmPassword" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 305.0
offset_right = 327.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("5_ylpt1")

[node name="buttonRegister" type="Button" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 376.0
offset_right = 268.0
offset_bottom = 422.0
theme_override_fonts/font = ExtResource("5_ylpt1")
text = "REGISTER"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 183.0
offset_right = 265.0
offset_bottom = 217.0
theme_override_fonts/font = ExtResource("5_ylpt1")
text = "PASSWORD"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 90.0
offset_right = 254.0
offset_bottom = 124.0
theme_override_fonts/font = ExtResource("5_ylpt1")
text = "USERNAME"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 173.0
offset_top = 35.0
offset_right = 260.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ylpt1")
text = "REGISTER"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(240, 204)

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 276.0
offset_right = 294.0
offset_bottom = 310.0
theme_override_fonts/font = ExtResource("5_ylpt1")
text = "REPEAT PASSWORD"

[node name="buttonBack" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -110.0
offset_top = 46.0
offset_right = 12.0
offset_bottom = 102.0
texture_normal = ExtResource("6_ly3k4")
texture_pressed = ExtResource("7_sxhig")
texture_hover = ExtResource("8_h0i6c")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="buttonRegister" to="." method="_on_button_register_pressed"]
[connection signal="pressed" from="buttonBack" to="." method="_on_button_back_pressed"]
